Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-6543

memory leak in lfs_setstripe, lustre/utils/lfs.c

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.8.0
    • Lustre 2.7.0
    • None
    • Ubuntu 15.04
    • 1
    • 9223372036854775807

      lfs_setstripe() returns on an error return without free'ing param

      if (st_count > 0 && nr_osts != st_count)

      { fprintf(stderr, "error: %s: stripe count '%d' doesn't " "match the number of OSTs: %d\n", argv[0], st_count, nr_osts); return CMD_HELP; }

      should be:

      if (st_count > 0 && nr_osts != st_count)

      { fprintf(stderr, "error: %s: stripe count '%d' doesn't " "match the number of OSTs: %d\n", argv[0], st_count, nr_osts); free(param); return CMD_HELP; }

            dmiter Dmitry Eremin (Inactive)
            colinianking Colin Ian King
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: